# lecture23

./: .gitignore  README.md  lecture.cabal  lecture22.cabal
countdown/: Countdown.hs  Main.hs
src/: Event.hs  JSON.hs  Lecture.hs  Lecture22.hs
