name:                lecture22
version:             1.0.0.0
homepage:            https://github.com/fpclass/lecture22#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           Copyright 2019 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable countdown
  main-is:             Main.hs
  other-modules:     Countdown
  hs-source-dirs:      countdown
  build-depends:       base >= 4.7 && < 5, transformers, lecture22, random
  default-language:    Haskell2010


library
  hs-source-dirs:      src
  exposed-modules:     Lab7, JSON, Event, Lecture22
  build-depends:       base >= 4.7 && < 5, random
  default-language:    Haskell2010
  default-extensions:  TypeSynonymInstances, FlexibleInstances, OverlappingInstances

source-repository head
  type:     git
  location: https://github.com/fpclass/lecture22
